fixed toggle menu button on mobile devices

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -103,7 +103,7 @@
   }
 
   .menu-toggle {
-    display: flex;
+    display: none;
     position: fixed;
     top: 12px;
     left: 12px;
